openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: holidays
  labels:
    app: holidays-api
