openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: holidays-api
  namespace: holidays
  labels:
    app: holidays-api
spec:
  to:
    kind: Service
    name: holidays-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
